// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrays 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <div
    class="root s-AofbQOEI1ryj"
  >
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="numbers"
      >
        numbers
      </label>
       
      <textarea
        class="s-AofbQOEI1ryj"
        id="numbers"
      />
       
    </span>
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="strings"
      >
        strings
      </label>
       
      <textarea
        class="s-AofbQOEI1ryj"
        id="strings"
      />
       
    </span>
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="empty"
      >
        empty
      </label>
       
      <textarea
        class="s-AofbQOEI1ryj"
        id="empty"
      />
       
    </span>
  </div>
  <!--&lt;Properties&gt;-->
</span>
`;

exports[`Native types 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <div
    class="root s-AofbQOEI1ryj"
  >
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="name"
      >
        name
      </label>
       
      <input
        class="s-AofbQOEI1ryj"
        id="name"
      />
       
    </span>
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="age"
      >
        age
      </label>
       
      <input
        class="s-AofbQOEI1ryj"
        id="age"
        type="number"
      />
       
    </span>
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="hasSigned"
      >
        hasSigned
      </label>
       
      <input
        class="s-AofbQOEI1ryj"
        id="hasSigned"
        type="checkbox"
      />
       
    </span>
  </div>
  <!--&lt;Properties&gt;-->
</span>
`;

exports[`Objects 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <div
    class="root s-AofbQOEI1ryj"
  >
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="numbers"
      >
        numbers
      </label>
       
      <textarea
        class="s-AofbQOEI1ryj"
        id="numbers"
      />
       
    </span>
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="strings"
      >
        strings
      </label>
       
      <textarea
        class="s-AofbQOEI1ryj"
        id="strings"
      />
       
    </span>
    <span
      class="s-AofbQOEI1ryj"
    >
      <label
        class="s-AofbQOEI1ryj"
        for="empty"
      >
        empty
      </label>
       
      <textarea
        class="s-AofbQOEI1ryj"
        id="empty"
      />
       
    </span>
  </div>
  <!--&lt;Properties&gt;-->
</span>
`;
